<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="10dp"
android:paddingBottom="10dp"
    >

<TextView
    android:id="@+id/buildingName"
    android:layout_width="138dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    />

<TextView
    android:id="@+id/numOfPeople"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1" />

<TextView
    android:id="@+id/numOfCapacity"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    />

    <Button
        android:id="@+id/qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="15sp"
        />


</LinearLayout>